KUBERNETES/EXAMPLES/03_ingress/03_simplest_ingress/ingress_resource.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - host: mysite.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
  - host: this.mysite.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
